fix(api): remove protected procedures
